# jeeves

./: .gitignore  README.md  metadata.json  onchainmetadata.json
.github/workflows/: main.yml
discord_api_runner/: Cargo.toml
jeeves/: Cargo.toml
jeeves/src/: commands.rs  consts.rs  discord.rs  icon  lib.rs  llm_types.rs  types.rs
my_bot/: Cargo.toml
my_bot/src/: lib.rs
pkg/: manifest.json  metadata.json
ui/: index.html
ui/src/: App.tsx  index.css
