[package]
name = "discord_api_runner"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
kinode_process_lib = { git = "https://github.com/uqbar-dao/process_lib.git", tag = "v0.6.0" }
discord_api = { git = "https://github.com/uqbar-dao/discord_api.git", rev = "ffb22475eec5d4ecead989eb500ef1d64c29b21e", features = [
  "with_process_lib",
] }
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "21a46c7" }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"
