[package]
name = "jeeves"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
kinode_process_lib = { git = "https://github.com/uqbar-dao/process_lib.git", tag = "v0.6.0" }
discord_api = { git = "https://github.com/uqbar-dao/discord_api.git", rev="07b086df804974790724e38382f70f65442116f5", features = ["with_process_lib"] }
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "21a46c7" }
url = "2.5.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"
